@@ -1,170 +1,430 @@
 package uk.gov.hmcts.reform.orgrolemapping.domain.service;
 
+import lombok.extern.slf4j.Slf4j;
+import org.apache.commons.collections4.CollectionUtils;
+import org.junit.jupiter.api.extension.ExtendWith;
 import org.junit.jupiter.params.ParameterizedTest;
 import org.junit.jupiter.params.provider.Arguments;
 import org.junit.jupiter.params.provider.MethodSource;
-import org.junit.runner.RunWith;
-import org.mockito.junit.MockitoJUnitRunner;
-import uk.gov.hmcts.reform.orgrolemapping.domain.model.FeatureFlag;
+import org.mockito.junit.jupiter.MockitoExtension;
 import uk.gov.hmcts.reform.orgrolemapping.domain.model.Authorisation;
+import uk.gov.hmcts.reform.orgrolemapping.domain.model.FeatureFlag;
 import uk.gov.hmcts.reform.orgrolemapping.domain.model.JudicialAccessProfile;
 import uk.gov.hmcts.reform.orgrolemapping.domain.model.JudicialBooking;
 import uk.gov.hmcts.reform.orgrolemapping.domain.model.RoleAssignment;
-import uk.gov.hmcts.reform.orgrolemapping.domain.model.enums.RoleCategory;
+import uk.gov.hmcts.reform.orgrolemapping.domain.model.RoleV2;
+import uk.gov.hmcts.reform.orgrolemapping.domain.model.constants.JudicialAccessProfile.AppointmentType;
+import uk.gov.hmcts.reform.orgrolemapping.domain.model.constants.RoleAssignmentConstants.Attributes;
+import uk.gov.hmcts.reform.orgrolemapping.domain.model.constants.RoleAssignmentConstants.RoleName;
 import uk.gov.hmcts.reform.orgrolemapping.domain.model.enums.ActorIdType;
 import uk.gov.hmcts.reform.orgrolemapping.domain.model.enums.Classification;
 import uk.gov.hmcts.reform.orgrolemapping.domain.model.enums.GrantType;
+import uk.gov.hmcts.reform.orgrolemapping.domain.model.enums.Jurisdiction;
+import uk.gov.hmcts.reform.orgrolemapping.domain.model.enums.RoleCategory;
 import uk.gov.hmcts.reform.orgrolemapping.domain.model.enums.RoleType;
+import uk.gov.hmcts.reform.orgrolemapping.domain.model.enums.jrd.AdditionalRole;
+import uk.gov.hmcts.reform.orgrolemapping.domain.model.enums.jrd.AdditionalRoleEnum;
+import uk.gov.hmcts.reform.orgrolemapping.domain.model.enums.jrd.Appointment;
+import uk.gov.hmcts.reform.orgrolemapping.domain.model.enums.jrd.AppointmentEnum;
+import uk.gov.hmcts.reform.orgrolemapping.helper.TestDataBuilder.ExtraTestAdditionalRoles;
+import uk.gov.hmcts.reform.orgrolemapping.helper.TestDataBuilder.ExtraTestAppointments;
 
+import java.time.LocalDate;
 import java.time.LocalDateTime;
 import java.util.ArrayList;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
-import java.util.stream.Collectors;
 import java.util.stream.Stream;
 
 import static org.hamcrest.MatcherAssert.assertThat;
 import static org.hamcrest.collection.IsIterableContainingInAnyOrder.containsInAnyOrder;
 import static org.junit.jupiter.api.Assertions.assertEquals;
+import static org.junit.jupiter.api.Assertions.assertFalse;
+import static org.junit.jupiter.api.Assertions.assertNull;
+import static org.junit.jupiter.api.Assertions.assertTrue;
 
-@RunWith(MockitoJUnitRunner.class)
+@Slf4j
+@ExtendWith(MockitoExtension.class)
 class DroolEmploymentHearingJudicialRoleMappingTest extends DroolBase {
 
+    private static final String JURISDICTION = Jurisdiction.EMPLOYMENT.getName();
+    private static final String SERVICE_CODE = Jurisdiction.EMPLOYMENT.getServiceCodes().get(0);
+
+    static final List<String> DEFAULT_SALARIED_ROLE = List.of(
+        "judge", "hmcts-judiciary", "hearing-viewer", "case-allocator"
+    );
+
+    static final List<String> ROLES_THAT_REQUIRE_REGIONS = List.of(
+        "judge", "leadership-judge", "specific-access-approver-judiciary"
+    );
+
     static String userId = "3168da13-00b3-41e3-81fa-cbc71ac28a69";
-    List<String> judgeRoleNamesWithWorkTypes = List.of("judge", "fee-paid-judge");
 
     static Map<String, String> employmentExpectedRoleNameWorkTypesMap = new HashMap<>();
 
-    {
-        employmentExpectedRoleNameWorkTypesMap.put("leadership-judge", null);
-        employmentExpectedRoleNameWorkTypesMap.put("judge", "hearing_work,decision_making_work,routine_work,"
-                + "applications,amendments");
-        employmentExpectedRoleNameWorkTypesMap.put("task-supervisor", null);
-        employmentExpectedRoleNameWorkTypesMap.put("case-allocator", null);
-        employmentExpectedRoleNameWorkTypesMap.put("hmcts-judiciary", null);
-        employmentExpectedRoleNameWorkTypesMap.put("specific-access-approver-judiciary", "access_requests");
-        employmentExpectedRoleNameWorkTypesMap.put("fee-paid-judge", "hearing_work,decision_making_work,routine_work,"
-                + "applications,amendments");
-        employmentExpectedRoleNameWorkTypesMap.put("tribunal-member", "hearing_work");
+    static {
+        employmentExpectedRoleNameWorkTypesMap.put(RoleName.LEADERSHIP_JUDGE, null);
+        employmentExpectedRoleNameWorkTypesMap.put(RoleName.JUDGE,
+            "hearing_work,decision_making_work,routine_work,applications,amendments");
+        employmentExpectedRoleNameWorkTypesMap.put(RoleName.TASK_SUPERVISOR, null);
+        employmentExpectedRoleNameWorkTypesMap.put(RoleName.CASE_ALLOCATOR, null);
+        employmentExpectedRoleNameWorkTypesMap.put(RoleName.HMCTS_JUDICIARY, null);
+        employmentExpectedRoleNameWorkTypesMap.put(RoleName.SPECIFIC_ACCESS_APPROVER_JUDICIARY,
+            "access_requests");
+        employmentExpectedRoleNameWorkTypesMap.put(RoleName.FEE_PAID_JUDGE,
+            "hearing_work,decision_making_work,routine_work,applications,amendments");
+        employmentExpectedRoleNameWorkTypesMap.put(RoleName.TRIBUNAL_MEMBER,
+            "hearing_work");
     }
 
-    static Stream<Arguments> endToEndData() {
+    // NB: to be retired after DTSAM-970
+    private enum LegacyAppointment implements AppointmentEnum {
+
+        ANY_OTHER_APPOINTMENT("Any Other Appointment", List.of("any-code")),
+        EMPLOYMENT_JUDGE("Employment Judge", List.of("48")),
+        EMPLOYMENT_JUDGE_SITTING_IN_RETIREMENT("Employment Judge (sitting in retirement)", List.of("128", "215")),
+        RECORDER("Recorder", List.of("67")),
+        REGIONAL_TRIBUNAL_JUDGE("Regional Tribunal Judge", List.of("74")),
+        TRIBUNAL_JUDGE("Tribunal Judge", List.of("84"));
+
+        private final String name;
+        private final List<String> codes;
+
+        LegacyAppointment(String name, List<String> codes) {
+            this.name = name;
+            this.codes = codes;
+        }
+
+        public String getName() {
+            return name;
+        }
+
+        public List<String> getCodes() {
+            return codes;
+        }
+    }
+
+    static Stream<Arguments> endToEndDataAppointments() {
         return Stream.of(
-                Arguments.of("President of Tribunal",
-                        "Salaried",
+                Arguments.of(Appointment.PRESIDENT_OF_TRIBUNAL,
+                        AppointmentType.SALARIED,
                         false,
-                        true,
-                        List.of("President of Tribunal"),
+                        ExtraTestAdditionalRoles.ANY_OTHER_ROLE,
+                        List.of("leadership-judge", "judge", "task-supervisor", "case-allocator", "hmcts-judiciary",
+                                "specific-access-approver-judiciary", "hearing-viewer")),
+                Arguments.of(Appointment.PRESIDENT_OF_TRIBUNAL,
+                        AppointmentType.SPTW,
+                        false,
+                        ExtraTestAdditionalRoles.ANY_OTHER_ROLE,
+                        List.of("leadership-judge", "judge", "task-supervisor", "case-allocator", "hmcts-judiciary",
+                            "specific-access-approver-judiciary", "hearing-viewer")),
+                Arguments.of(Appointment.PRESIDENT_ET_SCOTLAND,
+                        AppointmentType.SALARIED,
+                        false,
+                        ExtraTestAdditionalRoles.ANY_OTHER_ROLE,
+                        List.of("leadership-judge", "judge", "task-supervisor", "case-allocator", "hmcts-judiciary",
+                            "specific-access-approver-judiciary", "hearing-viewer")),
+                Arguments.of(Appointment.PRESIDENT_ET_SCOTLAND,
+                        AppointmentType.SPTW,
+                        false,
+                        ExtraTestAdditionalRoles.ANY_OTHER_ROLE,
+                        List.of("leadership-judge", "judge", "task-supervisor", "case-allocator", "hmcts-judiciary",
+                            "specific-access-approver-judiciary", "hearing-viewer")),
+                Arguments.of(Appointment.VICE_PRESIDENT,
+                        AppointmentType.SALARIED,
+                        false,
+                        ExtraTestAdditionalRoles.ANY_OTHER_ROLE,
+                        List.of("leadership-judge", "judge", "task-supervisor", "case-allocator", "hmcts-judiciary",
+                                "specific-access-approver-judiciary", "hearing-viewer")),
+                Arguments.of(Appointment.VICE_PRESIDENT,
+                        AppointmentType.SPTW,
+                        false,
+                        ExtraTestAdditionalRoles.ANY_OTHER_ROLE,
+                        List.of("leadership-judge", "judge", "task-supervisor", "case-allocator", "hmcts-judiciary",
+                            "specific-access-approver-judiciary", "hearing-viewer")),
+                Arguments.of(Appointment.VICE_PRESIDENT_ET_SCOTLAND,
+                        AppointmentType.SALARIED,
+                        false,
+                        ExtraTestAdditionalRoles.ANY_OTHER_ROLE,
+                        List.of("leadership-judge", "judge", "task-supervisor", "case-allocator", "hmcts-judiciary",
+                            "specific-access-approver-judiciary", "hearing-viewer")),
+                Arguments.of(Appointment.VICE_PRESIDENT_ET_SCOTLAND,
+                        AppointmentType.SPTW,
+                        false,
+                        ExtraTestAdditionalRoles.ANY_OTHER_ROLE,
+                        List.of("leadership-judge", "judge", "task-supervisor", "case-allocator", "hmcts-judiciary",
+                                "specific-access-approver-judiciary", "hearing-viewer")),
+                Arguments.of(Appointment.REGIONAL_EMPLOYMENT_JUDGE,
+                        AppointmentType.SALARIED,
+                        false,
+                        ExtraTestAdditionalRoles.ANY_OTHER_ROLE,
+                        List.of("leadership-judge", "judge", "task-supervisor", "case-allocator", "hmcts-judiciary",
+                                "specific-access-approver-judiciary", "hearing-viewer")),
+                Arguments.of(Appointment.REGIONAL_EMPLOYMENT_JUDGE,
+                        AppointmentType.SPTW,
+                        false,
+                        ExtraTestAdditionalRoles.ANY_OTHER_ROLE,
+                        List.of("leadership-judge", "judge", "task-supervisor", "case-allocator", "hmcts-judiciary",
+                            "specific-access-approver-judiciary", "hearing-viewer")),
+                Arguments.of(LegacyAppointment.EMPLOYMENT_JUDGE,
+                        AppointmentType.SALARIED,
+                        false,
+                        ExtraTestAdditionalRoles.ANY_OTHER_ROLE,
+                        DEFAULT_SALARIED_ROLE),
+                Arguments.of(LegacyAppointment.EMPLOYMENT_JUDGE,
+                        AppointmentType.SPTW,
+                        false,
+                        ExtraTestAdditionalRoles.ANY_OTHER_ROLE,
+                        DEFAULT_SALARIED_ROLE),
+                Arguments.of(LegacyAppointment.EMPLOYMENT_JUDGE,
+                        AppointmentType.FEE_PAID,
+                        false,
+                        ExtraTestAdditionalRoles.ANY_OTHER_ROLE,
+                        List.of("fee-paid-judge", "hmcts-judiciary", "hearing-viewer")),
+                Arguments.of(LegacyAppointment.EMPLOYMENT_JUDGE_SITTING_IN_RETIREMENT,
+                        AppointmentType.FEE_PAID,
+                        false,
+                        ExtraTestAdditionalRoles.ANY_OTHER_ROLE,
+                        List.of("fee-paid-judge", "hmcts-judiciary", "hearing-viewer")),
+                Arguments.of(LegacyAppointment.RECORDER,
+                        AppointmentType.FEE_PAID,
+                        false,
+                        ExtraTestAdditionalRoles.ANY_OTHER_ROLE,
+                        List.of("fee-paid-judge", "hmcts-judiciary", "hearing-viewer")),
+                Arguments.of(LegacyAppointment.REGIONAL_TRIBUNAL_JUDGE,
+                        AppointmentType.FEE_PAID,
+                        false,
+                        ExtraTestAdditionalRoles.ANY_OTHER_ROLE,
+                        List.of("fee-paid-judge", "hmcts-judiciary", "hearing-viewer")),
+                Arguments.of(LegacyAppointment.TRIBUNAL_JUDGE,
+                        AppointmentType.FEE_PAID,
+                        false,
+                        ExtraTestAdditionalRoles.ANY_OTHER_ROLE,
+                        List.of("fee-paid-judge", "hmcts-judiciary", "hearing-viewer")),
+                Arguments.of(Appointment.TRIBUNAL_MEMBER,
+                        AppointmentType.FEE_PAID,
+                        false,
+                        ExtraTestAdditionalRoles.ANY_OTHER_ROLE,
+                        List.of("tribunal-member", "hmcts-judiciary", "hearing-viewer")),
+                Arguments.of(Appointment.TRIBUNAL_MEMBER_LAY,
+                        AppointmentType.FEE_PAID,
+                        false,
+                        ExtraTestAdditionalRoles.ANY_OTHER_ROLE,
+                        List.of("tribunal-member", "hmcts-judiciary", "hearing-viewer"))
+        );
+    }
+
+    static Stream<Arguments> endToEndDataAdditionalRoles() {
+        return Stream.of(
+                Arguments.of(ExtraTestAppointments.ANY_OTHER_APPOINTMENT,
+                        AppointmentType.SALARIED,
+                        false,
+                        AdditionalRole.ACTING_REGIONAL_EMPLOYMENT_JUDGE,
                         List.of("leadership-judge", "judge", "task-supervisor", "case-allocator", "hmcts-judiciary",
                                 "specific-access-approver-judiciary", "hearing-viewer"),
                         null),
-                Arguments.of("Vice President",
-                        "Salaried",
+                Arguments.of(ExtraTestAppointments.ANY_OTHER_APPOINTMENT,
+                        AppointmentType.SPTW,
                         false,
-                        true,
-                        List.of("Vice President"),
+                        AdditionalRole.ACTING_REGIONAL_EMPLOYMENT_JUDGE,
                         List.of("leadership-judge", "judge", "task-supervisor", "case-allocator", "hmcts-judiciary",
-                                "specific-access-approver-judiciary", "hearing-viewer"),
-                        null),
-                Arguments.of("Vice-President, Employment Tribunal (Scotland)",
-                        "Salaried",
-                        false,
-                        true,
-                        List.of("Vice-President, Employment Tribunal (Scotland)"),
-                        List.of("leadership-judge", "judge", "task-supervisor", "case-allocator", "hmcts-judiciary",
-                                "specific-access-approver-judiciary", "hearing-viewer"),
-                        null),
-                Arguments.of("Regional Employment Judge",
-                        "Salaried",
-                        false,
-                        true,
-                        List.of("Regional Employment Judge"),
-                        List.of("leadership-judge", "judge", "task-supervisor", "case-allocator", "hmcts-judiciary",
-                                "specific-access-approver-judiciary", "hearing-viewer"),
-                        null),
-                Arguments.of("Employment Judge",
-                        "Salaried",
-                        false,
-                        true,
-                        List.of("Employment Judge"),
-                        List.of("judge", "hmcts-judiciary", "hearing-viewer", "case-allocator"),
-                        null),
-                Arguments.of("Employment Judge",
-                        "Fee Paid",
-                        false,
-                        true,
-                        List.of("Employment Judge"),
-                        List.of("fee-paid-judge", "hmcts-judiciary", "hearing-viewer"),
-                        null),
-                Arguments.of("Employment Judge (Sitting in Retirement)",
-                        "Fee Paid",
-                        false,
-                        true,
-                        List.of("Employment Judge"),
-                        List.of("fee-paid-judge", "hmcts-judiciary", "hearing-viewer"),
-                        null),
-                //Tribunal Member and Lay should get roles tribunal-member,hearing-viewer when baseLocationId = 1036
-                // or 1037
-                Arguments.of("Tribunal Member",
-                        "Fee Paid",
-                        false,
-                        true,
-                        List.of("Tribunal Member"),
-                        List.of("tribunal-member", "hmcts-judiciary", "hearing-viewer"),
-                        "1036"),
-                Arguments.of("Tribunal Member Lay",
-                        "Fee Paid",
-                        false,
-                        true,
-                        List.of("Tribunal Member Lay"),
-                        List.of("tribunal-member", "hmcts-judiciary", "hearing-viewer"),
-                        "1036"),
-                Arguments.of("Tribunal Member",
-                        "Fee Paid",
-                        false,
-                        true,
-                        List.of("Tribunal Member"),
-                        List.of("tribunal-member", "hmcts-judiciary", "hearing-viewer"),
-                        "1037"),
-                Arguments.of("Tribunal Member Lay",
-                        "Fee Paid",
-                        false,
-                        true,
-                        List.of("Tribunal Member Lay"),
-                        List.of("tribunal-member", "hmcts-judiciary", "hearing-viewer"),
-                        "1037"),
-                //Tribunal Member and Lay should NOT get roles when baseLocationId != 1036 or 1037
-                Arguments.of("Tribunal Member",
-                        "Fee Paid",
-                        false,
-                        true,
-                        List.of("Tribunal Member"),
-                        new ArrayList<>(),
-                        "1"),
-                Arguments.of("Tribunal Member Lay",
-                        "Fee Paid",
-                        false,
-                        true,
-                        List.of("Tribunal Member Lay"),
-                        new ArrayList<>(),
-                        "1"),
-                Arguments.of("",
-                        "Salaried",
-                        false,
-                        true,
-                        List.of("Acting Regional Employment Judge"),
-                        List.of("leadership-judge", "judge", "task-supervisor", "case-allocator", "hmcts-judiciary",
-                                "specific-access-approver-judiciary", "hearing-viewer"),
+                            "specific-access-approver-judiciary", "hearing-viewer"),
                         null)
         );
     }
 
+    @SuppressWarnings({"ParameterCanBeLocal"})
     @ParameterizedTest
-    @MethodSource("endToEndData")
+    @MethodSource("endToEndDataAppointments")
+    @MethodSource("endToEndDataAdditionalRoles") // NB: AdditionalRole mappings still require a valid appointment
+    void shouldGenerateNoRoleAssignments_forAppointmentMapping_expiredAuthEndDate(
+        AppointmentEnum appointment, String appointmentType, boolean addBooking,
+        AdditionalRoleEnum additionalRole, List<String> expectedRoleNames) {
+
+        // override parameter as this test will allways generate no role assignments as authorisation is expired
+        expectedRoleNames = List.of();
+
+        shouldGenerateRoleAssignments_forAppointmentMapping(
+            appointment,
+            appointmentType,
+            addBooking,
+            additionalRole,
+            expectedRoleNames,
+            LocalDateTime.now().minusDays(1L) // i.e. expired end date
+        );
+    }
+
+    @ParameterizedTest
+    @MethodSource("endToEndDataAppointments")
+    @MethodSource("endToEndDataAdditionalRoles") // NB: AdditionalRole mappings still require a valid appointment
+    void shouldGenerateRoleAssignments_forAppointmentMapping_noAuthEndDate(
+        AppointmentEnum appointment, String appointmentType, boolean addBooking,
+        AdditionalRoleEnum additionalRole, List<String> expectedRoleNames) {
+
+        shouldGenerateRoleAssignments_forAppointmentMapping(
+            appointment,
+            appointmentType,
+            addBooking,
+            additionalRole,
+            expectedRoleNames,
+            null // i.e. no end date
+        );
+    }
+
+    @ParameterizedTest
+    @MethodSource("endToEndDataAppointments")
+    @MethodSource("endToEndDataAdditionalRoles") // NB: AdditionalRole mappings still require a valid appointment
+    void shouldGenerateRoleAssignments_forAppointmentMapping_validAuthEndDate(
+        AppointmentEnum appointment, String appointmentType, boolean addBooking,
+        AdditionalRoleEnum additionalRole, List<String> expectedRoleNames) {
+
+        shouldGenerateRoleAssignments_forAppointmentMapping(
+            appointment,
+            appointmentType,
+            addBooking,
+            additionalRole,
+            expectedRoleNames,
+            LocalDateTime.now().plusYears(1L) // i.e. valid end date
+        );
+    }
+
+    void shouldGenerateRoleAssignments_forAppointmentMapping(
+        AppointmentEnum appointment, String appointmentType, boolean addBooking,
+        AdditionalRoleEnum additionalRole, List<String> expectedRoleNames,
+        LocalDateTime authEndDate) {
+
+        assertFalse(CollectionUtils.isEmpty(appointment.getCodes()), "Appointment has no codes defined");
+
+        // repeat for all valid appointment codes
+        appointment.getCodes().forEach(appointmentCode -> {
+
+            RoleV2 additionalRoles = RoleV2.builder()
+                .jurisdictionRoleName(additionalRole.getName())
+                .jurisdictionRoleId(additionalRole.getCodes().get(0)) // any role code will do in this test
+                .startDate(LocalDate.now().minusDays(20L))
+                .endDate(LocalDate.now().plusDays(20L)) // i.e. valid end date
+                .build();
+
+            shouldTakeJudicialAccessProfileConvertToJudicialOfficeHolderThenReturnRoleAssignments(
+                appointment.getName(),
+                appointmentCode,
+                appointmentType,
+                addBooking,
+                additionalRoles,
+                expectedRoleNames,
+                authEndDate
+            );
+
+        });
+
+    }
+
+    @SuppressWarnings({"ParameterCanBeLocal"})
+    @ParameterizedTest
+    @MethodSource("endToEndDataAdditionalRoles")
+    void shouldGenerateNoSeniorRoleAssignments_forAdditionalRoleMapping_expiredRoleEndDate(
+        AppointmentEnum appointment, String appointmentType, boolean addBooking,
+        AdditionalRoleEnum additionalRole, List<String> expectedRoleNames) {
+
+        // override parameter as this test will allways generate no senior role assignments
+        // as additional role is expired
+        expectedRoleNames = DEFAULT_SALARIED_ROLE;
+
+        shouldGenerateRoleAssignments_forAdditionalRole(
+            appointment,
+            appointmentType,
+            addBooking,
+            additionalRole,
+            expectedRoleNames,
+            LocalDate.now().minusDays(1L) // i.e. expired end date
+        );
+    }
+
+    @ParameterizedTest
+    @MethodSource("endToEndDataAdditionalRoles")
+    void shouldGenerateRoleAssignments_forAdditionalRoleMapping_noRoleEndDate(
+        AppointmentEnum appointment, String appointmentType, boolean addBooking,
+        AdditionalRoleEnum additionalRole, List<String> expectedRoleNames) {
+
+        shouldGenerateRoleAssignments_forAdditionalRole(
+            appointment,
+            appointmentType,
+            addBooking,
+            additionalRole,
+            expectedRoleNames,
+            null // i.e. no end date
+        );
+
+    }
+
+    @ParameterizedTest
+    @MethodSource("endToEndDataAdditionalRoles")
+    void shouldGenerateRoleAssignments_forAdditionalRoleMapping_validRoleEndDate(
+        AppointmentEnum appointment, String appointmentType, boolean addBooking,
+        AdditionalRoleEnum additionalRole, List<String> expectedRoleNames) {
+
+        shouldGenerateRoleAssignments_forAdditionalRole(
+            appointment,
+            appointmentType,
+            addBooking,
+            additionalRole,
+            expectedRoleNames,
+            LocalDate.now().plusYears(1L) // i.e. valid end date
+        );
+
+    }
+
+    void shouldGenerateRoleAssignments_forAdditionalRole(
+        AppointmentEnum appointment, String appointmentType, boolean addBooking,
+        AdditionalRoleEnum additionalRole, List<String> expectedRoleNames, LocalDate roleEndDate) {
+
+        assertFalse(CollectionUtils.isEmpty(additionalRole.getCodes()), "AdditionalRole has no codes defined");
+
+        // repeat for all valid additional-role codes
+        additionalRole.getCodes().forEach(additionalRoleCode -> {
+
+            RoleV2 additionalRoles = RoleV2.builder()
+                .jurisdictionRoleName(additionalRole.getName())
+                .jurisdictionRoleId(additionalRoleCode)
+                .startDate(LocalDate.now().minusDays(20L))
+                .endDate(roleEndDate)
+                .build();
+
+            shouldTakeJudicialAccessProfileConvertToJudicialOfficeHolderThenReturnRoleAssignments(
+                appointment.getName(),
+                appointment.getCodes().get(0), // any appointment code will do in this test
+                appointmentType,
+                addBooking,
+                additionalRoles,
+                expectedRoleNames,
+                LocalDateTime.now().plusYears(1L) // i.e. valid end date
+            );
+
+        });
+
+    }
+
     void shouldTakeJudicialAccessProfileConvertToJudicialOfficeHolderThenReturnRoleAssignments(
-            String appointment, String appointmentType, boolean addBooking, boolean hearingFlag,
-            List<String> assignedRoles, List<String> expectedRoleNames, String baseLocationId) {
+        String appointment, String appointmentCode, String appointmentType, boolean addBooking,
+        RoleV2 additionalRole, List<String> expectedRoleNames, LocalDateTime authEndDate) {
+
+        log.info("""
+                    Running JudicialAccessProfile -> RoleAssignments test for:
+                      * Appointment: '{}', with code: '{}', authEndDate: {}
+                      * AdditionalRole: '{}', with code: '{}', roleEndDate: {}
+                      * AppointmentType: '{}'
+                      * Expected RoleNames: {}
+                    """,
+            appointment,
+            appointmentCode,
+            authEndDate,
+            additionalRole.getJurisdictionRoleName(),
+            additionalRole.getJurisdictionRoleId(),
+            additionalRole.getEndDate(),
+            appointmentType,
+            expectedRoleNames
+        );
 
         allProfiles.clear();
         judicialAccessProfiles.clear();
@@ -179,86 +439,127 @@ class DroolEmploymentHearingJudicialRoleMappingTest extends DroolBase {
         judicialAccessProfiles.add(
                 JudicialAccessProfile.builder()
                         .appointment(appointment)
+                        .appointmentCode(appointmentCode)
                         .appointmentType(appointmentType)
                         .userId(userId)
-                        .roles(assignedRoles)
+                        .roles(List.of(additionalRole.getJurisdictionRoleName()))
+                        .additionalRoles(List.of(additionalRole))
                         .regionId("LDN")
-                        .baseLocationId(baseLocationId)
                         .primaryLocationId("London")
-                        .ticketCodes(List.of("BHA1"))
+                        .ticketCodes(List.of(SERVICE_CODE))
                         .authorisations(List.of(
                                 Authorisation.builder()
-                                        .serviceCodes(List.of("BHA1"))
-                                        .jurisdiction("EMPLOYMENT")
-                                        .endDate(LocalDateTime.now().plusYears(1L))
+                                        .serviceCodes(List.of(SERVICE_CODE))
+                                        .jurisdiction(JURISDICTION)
+                                        .endDate(authEndDate)
                                         .build()
                         ))
                         .build()
         );
 
-        //Execute Kie session
-        List<RoleAssignment> roleAssignments = buildExecuteKieSession(setFeatureFlags(hearingFlag));
+        log.info("""
+                    Test JudicialAccessProfiles used:
+                    {}
+                    """,
+            writeValueAsPrettyJson(judicialAccessProfiles)
+        );
 
-        List<String> roleNameResults =
-                roleAssignments.stream().map(RoleAssignment::getRoleName).collect(Collectors.toList());
+        // Execute Kie session
+        List<RoleAssignment> roleAssignments = buildExecuteKieSession(setFeatureFlags());
+
+
+        List<String> roleNameResults = roleAssignments.stream().map(RoleAssignment::getRoleName).toList();
+
+        log.info("""
+                    Results:
+                      * RoleNames: {}
+
+                    RoleAssignments:
+                    {}
+                    """,
+            roleNameResults,
+            writeValueAsPrettyJson(roleAssignments)
+        );
+
+        // assert expected number of role assignments match ...
+        assertEquals(expectedRoleNames.size(), roleAssignments.size());
+        // ... then check all are present
         assertThat(roleNameResults, containsInAnyOrder(expectedRoleNames.toArray()));
 
-        //assertions
+        // assertions
         roleAssignments.forEach(r -> {
             assertEquals(userId, r.getActorId());
-            assertCommonRoleAssignmentAttributes(r, "LDN", appointment);
+            assertCommonRoleAssignmentAttributes(r, "LDN", appointment, appointmentType);
         });
 
     }
 
-    static void assertCommonRoleAssignmentAttributes(RoleAssignment r, String regionId, String office) {
-
-
-        //filter
+    @SuppressWarnings({"SameParameterValue"})
+    static void assertCommonRoleAssignmentAttributes(RoleAssignment r,
+                                                     String regionId,
+                                                     String appointment,
+                                                     String appointmentType) {
 
         assertEquals(ActorIdType.IDAM, r.getActorIdType());
         assertEquals(userId, r.getActorId());
         assertEquals(RoleType.ORGANISATION, r.getRoleType());
         assertEquals(RoleCategory.JUDICIAL, r.getRoleCategory());
-        assertEquals(null, r.getAttributes().get("bookable"));
+        assertNull(r.getAttributes().get(Attributes.Name.BOOKABLE));
 
-        if (r.getRoleName().equals("hmcts-judiciary")) {
-            assertEquals(null, r.getAttributes().get("region"));
+        if (r.getRoleName().equals(RoleName.HMCTS_JUDICIARY)) {
+            assertNull(r.getAttributes().get(Attributes.Name.REGION));
             assertEquals(Classification.PRIVATE, r.getClassification());
             assertEquals(GrantType.BASIC, r.getGrantType());
-            assertEquals(true, r.isReadOnly());
-        } else if (r.getRoleName().equals("hearing-viewer")) {
-            assertEquals(null, r.getAttributes().get("region"));
+            assertTrue(r.isReadOnly());
+        } else if (r.getRoleName().equals(RoleName.HEARING_VIEWER)) {
+            assertNull(r.getAttributes().get(Attributes.Name.REGION));
             assertEquals(Classification.PUBLIC, r.getClassification());
             assertEquals(GrantType.STANDARD, r.getGrantType());
-            assertEquals("EMPLOYMENT", r.getAttributes().get("jurisdiction").asText());
-            assertEquals(false, r.isReadOnly());
-            assertEquals(null, r.getAttributes().get("contractType"));
+            assertEquals(JURISDICTION, r.getAttributes().get(Attributes.Name.JURISDICTION).asText());
+            assertFalse(r.isReadOnly());
         } else {
             assertEquals(Classification.PUBLIC, r.getClassification());
             assertEquals(GrantType.STANDARD, r.getGrantType());
-            assertEquals("EMPLOYMENT", r.getAttributes().get("jurisdiction").asText());
-            assertEquals(false, r.isReadOnly());
+            assertEquals(JURISDICTION, r.getAttributes().get(Attributes.Name.JURISDICTION).asText());
+            assertFalse(r.isReadOnly());
+            // NB: no region attribute set for PRESIDENT_OF_TRIBUNAL
+            if (Appointment.PRESIDENT_OF_TRIBUNAL.getName().equals(appointment)) {
+                assertNull(r.getAttributes().get(Attributes.Name.REGION));
+            } else if (ROLES_THAT_REQUIRE_REGIONS.contains(r.getRoleName())) {
+                assertEquals(regionId, r.getAttributes().get(Attributes.Name.REGION).asText());
+            } else {
+                assertNull(r.getAttributes().get(Attributes.Name.REGION));
+            }
+        }
+
+        if (r.getRoleName().equals(RoleName.HEARING_VIEWER)) {
+            assertNull(r.getAttributes().get(Attributes.Name.CONTRACT_TYPE));
+        } else {
+            assertEquals(
+                AppointmentType.isSalaried(appointmentType) ? "Salaried" : "Fee-Paid",
+                r.getAttributes().get(Attributes.Name.CONTRACT_TYPE).asText()
+            );
         }
 
         String expectedWorkTypes = employmentExpectedRoleNameWorkTypesMap.get(r.getRoleName());
         String actualWorkTypes = null;
-        if (r.getAttributes().get("workTypes") != null) {
-            actualWorkTypes = r.getAttributes().get("workTypes").asText();
+        if (r.getAttributes().get(Attributes.Name.WORK_TYPES) != null) {
+            actualWorkTypes = r.getAttributes().get(Attributes.Name.WORK_TYPES).asText();
         }
         assertEquals(expectedWorkTypes, actualWorkTypes);
     }
 
-    private List<FeatureFlag> setFeatureFlags(boolean hearingFlag) {
+    private List<FeatureFlag> setFeatureFlags() {
         List<FeatureFlag> featureFlags = new ArrayList<>(getAllFeatureFlagsToggleByJurisdiction("EMPLOYMENT", true));
 
         featureFlags.add(
                 FeatureFlag.builder()
                         .flagName("sscs_hearing_1_0")
-                        .status(hearingFlag)
+                        .status(true)
                         .build()
         );
 
         return featureFlags;
     }
+
 }
